修改 初步与后台数据对接

--- a/views/app.html
+++ b/views/app.html
@@ -11,7 +11,7 @@
       <a href="/" class="_nav-link">Developer</a>
     </h1>
     <nav class="_nav">
-      <a href="/offline" class="_nav-link">Offline</a>
+      <!-- <a href="/offline" class="_nav-link">Offline</a> -->
       <a href="/about" class="_nav-link">About</a>
       <a href="/news" class="_nav-link">News</a>
       <a href="/help" class="_nav-link">Tips</a>
@@ -19,9 +19,8 @@
   </header>
   <section class="_sidebar">
     <div class="_list">
-      <%var list = [];%>
       <%list.forEach(function(v,i){%>
-        <a href="/<%= v.slug %>/" class="_list-item _icon-<%= v.icon %> _list-dir"><span class="_list-arrow"></span><%= v.name %></a>
+        <a href="/<%= v.slug %>/" class="_list-item _icon-<%= v.slug %> _list-dir"><span class="_list-arrow"></span><%= v.name %></a>
       <%})%>
     </div>
   </section>
