--- a/views/layout.html
+++ b/views/layout.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui">
-  <meta name='description' content='<%= config.description %>'>
-  <meta name="keywords" content="<%= config.keywords %>"/>
+  <meta name='description' content='config.keywords'>
+  <meta name="keywords" content="config.keywords"/>
   <meta name="format-detection" content="telephone=no">
   <meta name="referrer" content="always">
-  <title>Developer</title>
+  <title>Developer_layout</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/css/app.css">
-  <link rel="stylesheet" href="/css/test.css">
+  <link rel="stylesheet" href="/public/css/app.css">
+  <link rel="stylesheet" href="/public/css/test.css">
 </head>
-<body class="_booting _noscript">
+<!-- <body class="_booting _noscript"> -->
+<body class="">
 <noscript class="_fail">Developer requires JavaScript to run.</noscript>
-<%- include app.html %>
+<%- include index.html %>
 </body>
 </html>
