--- a/views/app.html
+++ b/views/app.html
@@ -25,7 +25,7 @@
     </div>
   </section>
   <section class="_container">
-    <!-- <div class="_content _content-loading"></div> -->
+    <!-- <div class="_content _content-loading"> -->
     <div class="_content">
         <%- include list-fav.html %>
     </div>
