--- a/views/layout.html
+++ b/views/layout.html
@@ -40,7 +40,7 @@
     <section class="_container">
       <!-- <div class="_content _content-loading"> -->
       <div class="_content">
-        <%- include index.html %>
+        <%-body -%>
       </div>
     </section>
   </div>
