--- a/views/layout.html
+++ b/views/layout.html
@@ -9,10 +9,10 @@
   <meta name="referrer" content="always">
   <title>Developer_layout</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/public/css/app.css">
-  <link rel="stylesheet" href="/public/css/test.css">
+  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="/css/test.css">
 </head>
-<!-- <body class="_booting _noscript"> -->
+<!-- <body class="_booting _noscript _loading"> -->
 <body class="">
 <noscript class="_fail">Developer requires JavaScript to run.</noscript>
   <div class="_app">
@@ -44,5 +44,6 @@
       </div>
     </section>
   </div>
+<script data-main="src/application" src="/src/vendor/require.js"></script>
 </body>
 </html>
